--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -20,7 +20,13 @@
 
 @section scripts{
 
-
+    <script>
+        var btn = document.getElementById('Guardar');
+        function onGuardar() {
+            btn.disabled = true;
+            $("#formTipos").submit();
+        }
+    </script>
 
 }
 @using Microsoft.AspNetCore.Http
@@ -249,7 +255,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
-                <button type="submit" id="Guardar" class="btn btn-rounded btn-outline-success">Guardar Cambios</button>
+                <button type="button" id="Guardar" class="btn btn-rounded btn-outline-success" onclick="javascript: onGuardar()">Guardar Cambios</button>
             </div>
         </div>
     </div>
