--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
@@ -219,6 +219,16 @@
                     <div class="col-md-4 pr-1">
 
                         <div class="form-group">
+                            <label>Cliente</label>
+                            <input type="text" class="form-control form-control-lg" id="desc" asp-for="Cliente" readonly>
+
+                        </div>
+
+
+                    </div>
+                    <div class="col-md-4 pr-1">
+
+                        <div class="form-group">
                             <label>Diagnóstico</label>
                             <select id="idDiag" class="form-control" asp-for="Encabezado.idDiagnostico" disabled="disabled" readonly>
                                 <option value="0" selected>Seleccione</option>
