--- a/Sicsoft.Checkin.Web/Pages/Shared/Mensajes.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Shared/Mensajes.cshtml
@@ -4,7 +4,7 @@
 @{
 
 }
-<div class="modal modal-static fade" id="divProcesando" role="dialog" aria-hidden="true" style="height: 420px; padding-top: 10%;">
+<div class="modal modal-static fade" id="divProcesando" role="dialog" aria-hidden="true" style="height: 420px; padding-top: 10%; background-color: transparent;">
     <div class="modal-dialog" style="background-color: transparent; opacity:1;">
         <div class="modal-content" style="background-color: transparent; opacity:1;">
             <div class="modal-body" style="background-color: transparent; opacity:1;height: 240px;">
