--- a/Sicsoft.Checkin.Web/Pages/Bodega/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Index.cshtml
@@ -45,16 +45,83 @@
 
             });
 
+            var filtro = '@Model.filtro.Codigo3';
+            if (filtro == '0') {
+                var cantidad = @Model.Objeto.Count();
+                if (cantidad > 0) {
+                    notifyMe();
 
-
-            //$(document).ready(function () {
-            //    $('#tablita').DataTable({
-            //        "order": [[0, "desc"]]
-            //    });
-            //});
-
+                }
+            }
 
         });
+
+        idleTime = 0;
+
+
+
+        //Increment the idle time counter every second.
+        var idleInterval = setInterval(timerIncrement, 1000);
+
+
+
+
+
+        function timerIncrement() {
+            idleTime++;
+            if (idleTime > 30) {
+                doPreload();
+            }
+        }
+
+        //Zero the idle timer on mouse movement.
+        $(this).mousemove(function (e) {
+            idleTime = 0;
+        });
+
+        function doPreload() {
+            location.reload();
+        }
+
+
+        function notifyMe() {
+            //Vamos a comprobar si el navegador es compatible con las notificaciones
+            if (!("Notification" in window)) {
+                alert("This browser does not support desktop notification");
+            }
+            // Vamos a ver si ya se han concedido permisos de notificación
+            else if (Notification.permission === "granted") {
+                // Si está bien vamos a crear una notificación
+                var body = "Tienes " + @Model.Objeto.Count() +" solicitud(es) en espera";
+                var icon = "/notificacion.png";
+                var title = "Notificación";
+                var options = {
+                    body: body,
+                    icon: icon,
+                    lang: "ES",
+                    renotify: "true",
+                    tag: 'renotify'
+                }
+                var notification = new Notification(title, options);
+                var audio = new Audio('/sonido.mp3');
+                audio.play();
+                notification.onclick = function () {
+                    //action
+                };
+                setTimeout(notification.close.bind(notification), 5000);
+            }
+            // De lo contrario, tenemos que pedir permiso al usuario
+            else if (Notification.permission !== 'denied') {
+                Notification.requestPermission(function (permission) {
+                    // Si el usuario acepta, vamos a crear una notificación
+                    if (permission === "granted") {
+                        var notification = new Notification("Gracias, Ahora podras recibir notifiaciones de nuestra página");
+                    }
+                });
+            }
+            // Por fin, si el usuario ha denegado notificaciones, y usted
+            // Quiere ser respetuoso no hay necesidad de preocuparse más sobre ellos.
+        }
 
          function enviarSAP(id) {
 
@@ -175,19 +242,37 @@
 
                             </div>
 
-                            <div class="col-sm-12">
-                                <br />
-                            </div>
 
-
-                            <div class="col-sm-6 pr-1">
-                            </div>
-                            <div class="col-sm-6 pl-1" style="text-align: right;">
-                                <button title="Buscar" type="submit" class="btn btn-rounded btn-outline-primary"> <i class="fas fa-search"></i></button>
-
-                            </div>
                         </div>
 
+                        <div class="col-sm-4 pr-1">
+                            <div class="form-group">
+                                <label>Status</label>
+                                <select id="statusBodega" class="form-control" asp-for="filtro.Codigo3">
+                                    <option value="-1">Seleccione</option>
+
+                                    <option value="0">En espera</option>
+                                    <option value="1">Aceptados</option>
+                                    <option value="2">Rechazados</option>
+
+
+                                </select>
+                            </div>
+
+
+                        </div>
+
+                        <div class="col-sm-12">
+                            <br />
+                        </div>
+
+
+                        <div class="col-sm-6 pr-1">
+                        </div>
+                        <div class="col-sm-6 pl-1" style="text-align: right;">
+                            <button title="Buscar" type="submit" class="btn btn-rounded btn-outline-primary"> <i class="fas fa-search"></i></button>
+
+                        </div>
                     </div>
 
                 </form>
