--- a/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
@@ -38,9 +38,16 @@
 
 }
 @section scripts{
-
+    <script>
+        var btn = document.getElementById('Guardar');
+        function onGuardar() {
+            btn.disabled = true;
+            $("#formTipos").submit();
+        }
+    </script>
 
     <script>
+
         $(document).ready(function () {
             jQuery(document).ready(function ($) {
 
@@ -151,7 +158,7 @@
 
                         </div>
 
-                        <div class="col-md-4 pr-1">
+                        <div class="col-md-4 pl-1">
 
                             <div class="form-group">
                                 <label>Fecha Creación</label>
@@ -191,7 +198,7 @@
 
 
                         </div>
-                        <div class="col-md-4 pr-1">
+                        <div class="col-md-4 pl-1">
 
                             <div class="form-group">
                                 <label>Llamada</label>
@@ -201,7 +208,16 @@
 
 
                         </div>
+                        <div class="col-md-4 pr-1">
 
+                            <div class="form-group">
+                                <label>Cliente</label>
+                                <input type="text" class="form-control form-control-lg" id="cliente" asp-for="Cliente" readonly>
+
+                            </div>
+
+
+                        </div>
                         <div class="col-md-4 pr-1">
 
                             <div class="form-group">
@@ -212,7 +228,7 @@
 
 
                         </div>
-                        <div class="col-md-4 pr-1">
+                        <div class="col-md-4 pl-1">
 
                             <div class="form-group">
                                 <label>Bodega Destino</label>
@@ -253,6 +269,7 @@
                                     <th>ID</th>
                                     <th>Producto</th>
                                     <th>Cantidad</th>
+                                    <th>Ubicación</th>
 
 
 
@@ -268,6 +285,8 @@
 
 
                                         <td>@item.Cantidad</td>
+                                        @{var itemCode = item.ItemCode.Trim().Split('|')[0].ToString().Trim();}
+                                        <td>@( Model.ProductosHijos.Where(a => a.codSAP == itemCode).FirstOrDefault() == null ? "" : Model.ProductosHijos.Where(a => a.codSAP == itemCode).FirstOrDefault().Localizacion )</td>
 
 
                                     </tr>
@@ -280,6 +299,7 @@
                                     <th>ID</th>
                                     <th>Producto</th>
                                     <th>Cantidad</th>
+                                    <th>Ubicación</th>
 
                                 </tr>
                             </tfoot>
@@ -290,5 +310,5 @@
         </div>
 
     </div>
-    <button type="submit" onclick="javascript: Generar();" class="btn btn-rounded btn-outline-success">Guardar Cambios</button>
+    <button type="button" id="Guardar" onclick="javascript: onGuardar();" class="btn btn-rounded btn-outline-success">Guardar Cambios</button>
 </form>
