--- a/Sicsoft.Checkin.Web/Pages/Boletas/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Boletas/Nuevo.cshtml
@@ -6,7 +6,7 @@
 @section breadcrumb{
 
     <li class="breadcrumb-item">
-        <a >Tarjeta de Equipo</a>
+        <a>Tarjeta de Equipo</a>
     </li>
     <li class="breadcrumb-item active">
         <a>Nuevo</a>
@@ -19,7 +19,12 @@
 }
 
 @section scripts{
-
+    <script>
+        var btn = document.getElementById('Guardar');
+        function onGuardar() {
+            btn.disabled = true;
+        }
+    </script>
 
 
 }
@@ -35,7 +40,7 @@
 
                     <div class="col-sm-6" style="text-align: right">
 
-                       
+
 
                     </div>
                 </div>
@@ -71,7 +76,7 @@
                             <div class="form-group">
                                 <label>Cliente:</label>
 
-                                <input type="text" list="cardcodes" class="form-control form-control-lg" id="cardcode" placeholder="Nombre Cliente" asp-for="Input.CardCode" >
+                                <input type="text" list="cardcodes" class="form-control form-control-lg" id="cardcode" placeholder="Nombre Cliente" asp-for="Input.CardCode">
 
                                 <datalist id="cardcodes">
                                     @foreach (var item in Model.Clientes.Clientes)
@@ -106,7 +111,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <button type="submit" id="Guardar" class="btn btn-rounded btn-outline-success">Guardar Cambios</button>
+                                <button type="submit" id="Guardar" class="btn btn-rounded btn-outline-success" onclick="javascript: onGuardar();">Guardar Cambios</button>
                             </div>
                         </div>
                     </div>
