--- a/Sicsoft.Checkin.Web/Pages/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Index.cshtml
@@ -88,7 +88,7 @@
 @using Newtonsoft.Json;
 @inject IHttpContextAccessor httpContextAccessor
 
-<div class="row">
+@*<div class="row">
     <div class="col-md-12   ">
         <div class="card">
             <div class="card-header">
@@ -150,4 +150,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
