--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
@@ -194,11 +194,11 @@
                 background: #367ebd;
             }
     </style>
-     
+
 }
 
 @section scripts{
-  
+
 
     <script type="text/javascript">
 
@@ -234,11 +234,11 @@
             //var drawText = document.getElementById("draw-dataUrl");
             //var drawImage = document.getElementById("draw-image");
             var clearBtn = document.getElementById("draw-clearBtn");
-        /*  *//*  var submitBtn = document.getElementById("draw-submitBtn");*/
+            /*  *//*  var submitBtn = document.getElementById("draw-submitBtn");*/
             clearBtn.addEventListener("click", function (e) {
                 // Definimos que pasa cuando el boton draw-clearBtn es pulsado
                 clearCanvas();
-               // drawImage.setAttribute("src", "");
+                // drawImage.setAttribute("src", "");
             }, false);
             // Definimos que pasa cuando el boton draw-submitBtn es pulsado
             //submitBtn.addEventListener("click", function (e) {
@@ -367,7 +367,13 @@
 
     </script>
 
-
+    <script>
+        var btn = document.getElementById('Guardar');
+        function onGuardar() {
+            btn.disabled = true;
+            $("#formTipos").submit();
+        }
+    </script>
     <script>
 
         function rellenaProductos(lista) {
@@ -454,7 +460,7 @@
                                 <datalist id="cardcodes">
                                     @foreach (var item in Model.Clientes.Clientes)
                                     {
-                                    <option value="@item.CardCode / @item.CardName"> </option>
+                                        <option value="@item.CardCode / @item.CardName"> </option>
                                     }
                                 </datalist>
                                 <a asp-page="/Client/Nuevo" style="text-decoration: underline;" class="nav-link" target="_blank">Crear Cliente</a>
@@ -469,7 +475,7 @@
                                     <option value="0">Seleccione</option>
 
                                 </select>
-                                <a asp-page="/Boletas/Nuevo" style="text-decoration: underline;" class="nav-link" target="_blank">Crear Boleta</a>
+                                <a asp-page="/Boletas/Nuevo" style="text-decoration: underline;" class="nav-link" target="_blank">Crear Tarjeta Equipo</a>
                             </div>
                         </div>
 
@@ -477,10 +483,19 @@
                             <div class="form-group">
                                 <label>Estado:</label>
                                 <select id="status" class="form-control" asp-for="Input.Status" required>
-                                    <option value="0">Seleccione</option>
+                                    <!-- <option value="0">Seleccione</option>-->
                                     @foreach (var item in Model.Status)
                                     {
-                                        <option value="@item.idSAP">@item.Nombre</option>
+                                        if (item.Nombre.ToLower().Contains("ABRIR"))
+                                        {
+                                            <option value="@item.idSAP" selected>@item.Nombre</option>
+
+                                        }
+                                        else
+                                        {
+                                            <option value="@item.idSAP">@item.Nombre</option>
+
+                                        }
                                     }
                                 </select>
                             </div>
@@ -537,23 +552,32 @@
                         </div>
 
                         <div class="col-sm-6">
-                         
+
                             <div class="form-group">
                                 <label>Técnico:</label>
                                 <select id="srt" class="form-control" asp-for="Input.Tecnico" required>
                                     <option value="0">Seleccione</option>
                                     @foreach (var item in Model.Tecnicos)
                                     {
-                                        <option value="@item.idSAP">@item.Nombre</option>
+                                        if (item.Nombre.ToLower().Contains("pendiente"))
+                                        {
+                                            <option value="@item.idSAP" selected>@item.Nombre</option>
+
+                                        }
+                                        else
+                                        {
+                                            <option value="@item.idSAP">@item.Nombre</option>
+
+                                        }
                                     }
                                 </select>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                    <label>Horas:</label>
-                                   <input type="number"  min="0" step="1" class="form-control" asp-for="Input.Horas" id="horas" required />
-                                </div>
+                                <label>Horas:</label>
+                                <input type="number" min="0" step="1" class="form-control" asp-for="Input.Horas" id="horas" required />
+                            </div>
                         </div>
 
                     </div>
@@ -597,7 +621,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="card">
-               
+
                 <div class="card-body">
                     <p>Firmar a continuación:</p>
                     <div class="contenedor">
@@ -639,7 +663,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
-                <button type="submit" id="Guardar" class="btn btn-rounded btn-outline-success">Guardar Cambios</button>
+                <button type="button" id="Guardar" class="btn btn-rounded btn-outline-success" onclick="javascript: onGuardar()">Guardar Cambios</button>
             </div>
         </div>
     </div>
